# Financial

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: agent_config.yaml  model_config.yaml  retrieval_config.yaml
docs/: architecture.md
pdf/: extra_core_laws_manifest.csv  manifest.csv  skipped.csv
prompts/: answer.md  evidence_check.md  planner.md  query_rewrite.md  router.md  synthesizer.md  verifier.md
scripts/: build_chunks.py  build_index.py  parse_pdfs_with_mineru.py  run_agent.py
src/financial_agentic_rag/: __init__.py  config.py  tracing.py
src/financial_agentic_rag/agents/: __init__.py  common.py  executer.py  planner.py  router.py  simple_answer.py  synthesizer.py  verifier.py
src/financial_agentic_rag/chains/: __init__.py
src/financial_agentic_rag/graphs/: builder.py  state.py
src/financial_agentic_rag/graphs/checkpoints/: __init__.py
src/financial_agentic_rag/indexing/: __init__.py  mineru_chunks.py
src/financial_agentic_rag/llms/: __init__.py  client.py  json_utils.py
src/financial_agentic_rag/memory/: __init__.py
src/financial_agentic_rag/retrievers/: __init__.py  vectorstore.py
src/financial_agentic_rag/runtime/: __init__.py  app.py
src/financial_agentic_rag/schemas/: indexing.py  state.py
src/financial_agentic_rag/tools/: retrieval.py
src/financial_agentic_rag/utils/: io.py
tests/: test_agentic_graph.py  test_executer.py  test_llm_streaming.py  test_mineru_chunks.py  test_planner_verifier.py  test_project_structure.py  test_retrieval_tools.py  test_simple_answer.py  test_tracing.py
(+9 files in other folders)
